# Rust_MCS_web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
Rust_MCS_frontend/: index.html  main.js
Rust_MCS_frontend/src/: output.css
src/: main.rs
